# challenges

./: .gitmodules  README.md  tentativeCompliquee.hs
defi01/: REAME.md
defi01/csharp/: README.md  readme.md
defi01/csharp/Adraekor/: Program.cs
defi01/csharp/Elanis/: Elanis.Sorting.sln
defi01/csharp/Elanis.Sorting/: Elanis.Sorting.sln
defi01/java/: .gitignore  pom.xml  readme.md
defi01/javascript/: README.md  iswitch.ts  pytoxi.js  wyxo.ts
defi01/php/: readme.md
defi01/php/Hesode/: sol_7.4.php  sol_8.0.php  tests.php
defi01/php/superkooka/: assertions.php  solution1.php  solution2.php
defi01/python/: README.md  __main__.py  egirl.py  heap.py  jackblack.py  jean.py  jo_link_noir.py  lazor.py  linek.py  miremi9.py  niceguy.py  teckel.py  titi.py  tools.py
defi02/: README.md
defi02/java/: README.md
defi02/javascript/: README.md  iswitch.ts  pytoxi.js
defi02/javascript/mestery/: demo.ts  index.ts  maze.ts  renderer.ts
defi02/python/Ermite/: maze.py
defi02/python/Lazor/: __main__.py
defi02/python/Linek/: __main__.py
defi02/rust/wafelack/: maze.rs
defi03/: README.md
defi03/Haskell/pauloud/: tentativeSimple.hs
defi03/c++/egarim/: labyrinthe.hpp  main.cpp
defi03/c++/poet/: labyresolve.cpp  labyresolve.h
defi03/cpp/egarim/: labyrinthe.cpp
defi03/cpp/poet/: main.cpp
defi03/javascript/: iswitch.ts
defi03/python/: gammeray99.py  lazor.py  leminaw.py  linek.py
defi04/: README.md
defi04/cpp/tutosfaciles48/: CMakeLists.txt  Compteur.cpp  Compteur.h  HttpServer.cpp  HttpServer.h  Request.cpp  Request.h  Response.cpp  Response.h  footer.html  header.html  http_status_codes.h  main.cpp  utils.h
defi04/crystal/: README.md  REAME.md
defi04/javascript/: iswitch.ts
defi04/python/: lynix.py
defi05/: README.md  sky-zoo.html
defi05/cpp/tutosfaciles48/: CMakeLists.txt  Cell.cpp  Cell.h  main.cpp  util.h
defi05/javascript/: lazor.html  sky-zoo.html
defi05/python/: dyosir.py
defi06/: README.md  readme.md
defi07/: README.md
defi07/javascript/: iswitch.ts  mestery.mjs
defi07/python/: jean.py  lazor.py  miremi9.py
defi08/: README.md
defi08/haskell/nokomprendo/: README.md  connect4.cabal  stack.yaml
defi08/haskell/nokomprendo/app/: connect4-cli.hs  connect4-cmp.hs  connect4-gui.hs
defi08/haskell/nokomprendo/src/Connect4/: Bot.hs  BotNegamax.hs  Game.hs
defi08/haskell/nokomprendo/test/Connect4/: BotNegamaxSpec.hs  BotSpec.hs  GameSpec.hs
defi08/python/: lazor.py
defi08/rust/: wafelack.rs
defi09/: README.md  mestery.md  timi.md
defi09/nokomprendo/: README.md
defi10/: README.md
defi10/glsl/: yamashi.md
defi10/haskell/nokomprendo/: README.md  boules2d.cabal  default.nix  stack.yaml
defi10/haskell/nokomprendo/src/: Animation.hs  Main.hs  Params.hs  Scene.hs
defi11/: README.md
defi11/common-lisp/: wafelack.lisp
defi11/haskell/: nokomprendo.hs
defi11/prolog/: lazor.pl
defi11/python/: alphanow.py  ats973.py  epicout.py  lazor.py  sehnsucht.py  titi.py
defi12/: README.md  get_grid.py  sudoku.txt
haskell/pauloud/: tentativeCompliquee.hs
(+229 files in other folders)
