cabal-version:      2.2
name:               boules2d
version:            1.0
build-type:         Simple
license:            MIT

executable boules2d
    ghc-options:        -Wall -O3
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs

    other-modules:      Animation
                        Params
                        Scene

    build-depends:      base,
                        gloss,
                        lens,
                        linear,
                        random,
                        vector

